# glmreg

./: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md
R/: extendr-wrappers.R  predict.R  simple_glm.R
man/: glm_irls.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  glmreg-win.def
src/rust/: Cargo.toml
src/rust/src/: error.rs  family.rs  lib.rs  model.rs  spec.rs
tests/: testthat.R
tests/testthat/: test-glm.R
