[package]
name = 'glmreg'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'glmreg'

[dependencies]
extendr-api = { version = '0.8.1', features = ['ndarray'] }
ndarray-linalg = { version = '0.17.0', features = ['openblas'] }

[profile.release]
lto = true
codegen-units = 1
